# ai-agent.alexis

./: MANIFEST.in  README.md  alexis.py  alexis_config.py  alexis_version.py  config.jsonc.example  fabricare.json  pyproject.toml  requirements.txt  version.json
docs/: BUILD.md  CONTEXT_MEMORY_MAP.md  DRIVER_SYSTEM_OVERVIEW.md  FEATURE_SUMMARY.md  LLM_DRIVER_USAGE.md  QUICK_START.md  SESSIONS.md  TEXTUAL_INTERACTIVE_UI.md  TODO_SYSTEM.md  UI_DRIVER_USAGE.md
mcp/: mcp-server-skills.py
model/: __init__.py  llm_driver_gemini.py  llm_driver_llama.py
src/alexis/: SUBAGENTS.md  __init__.py  __main__.py  cli.py  config.py  session.py  version.py
src/alexis/data/: version.json
src/alexis/mcp/: __init__.py  mcp-server-skills.py  mcp-server-todo.py  mcp-server-workspace.py
src/alexis/model/: llm_driver.py  llm_driver_factory.py
src/alexis/skills/subagent/: SKILL.md
src/alexis/skills/todo/: SKILL.md
src/alexis/ui/: __init__.py  ui_driver.py  ui_driver_api.py  ui_driver_api_web.html  ui_driver_factory.py  ui_driver_interactive.py  ui_driver_textual_interactive.py
test/: AGENTS.md  README.md
test/.agents/: SYSTEM.md
test/.agents/skills/git-helper/: SKILL.md
test/.agents/skills/haiku-writer/: SKILL.md
test/.agents/skills/pirate-speak/: SKILL.md
test/.agents/skills/recipe-chef/: SKILL.md
test/.agents/skills/recipe-chef/templates/: recipe-template.md
test/.agents/skills/toolbox/: SKILL.md
test/.agents/skills/toolbox/scripts/: ascii_art.py  calc.py  date.py
test/.agents/skills/weather-reporter/: SKILL.md
tools/: make.py
ui/: ui_driver_api.py  ui_driver_factory.py  ui_driver_simple.py  ui_driver_textual_interactive.py
