# AI-Agent.Alexis
# SPDX-FileCopyrightText: 2026 Grigore Stefan <g_stefan@yahoo.com>
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alexis"
description = "AI-Agent.Alexis — a multimodal LLM agent CLI with MCP support"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Grigore Stefan", email = "g_stefan@yahoo.com" }]
dynamic = ["version"]

dependencies = [
    "mcp>=0.1.0",
]

[project.optional-dependencies]
# API server mode (--ui-driver api / --api-port)
api = [
    "aiohttp>=3.8.0",
    "aiohttp_cors>=0.7.0",
]
# Advanced interactive TUI with mouse support (--ui-driver textual)
tui = [
    "textual>=0.30.0",
]
# Everything
all = [
    "aiohttp>=3.8.0",
    "aiohttp_cors>=0.7.0",
    "textual>=0.30.0",
]

# The `alexis` terminal command -> alexis.py:main()
[project.scripts]
alexis = "alexis:main"

[tool.setuptools]
# Flat layout: three top-level modules plus the ui/ and model/ packages.
py-modules = ["alexis", "alexis_version", "alexis_config"]
packages = ["ui", "model"]
# Ship the non-package data files listed in MANIFEST.in (version.json, the
# bundled mcp/ server scripts, the .agents/ skills bundle, docs/). Required so a
# source build / sdist carries everything the agent loads relative to itself.
include-package-data = true

[tool.setuptools.dynamic]
# Single source of truth: version is read from version.json via alexis_version.
version = { attr = "alexis_version.__version__" }
