# AI-Agent.Alexis
# SPDX-FileCopyrightText: 2026 Grigore Stefan <g_stefan@yahoo.com>
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alexis"
description = "AI-Agent.Alexis — a multimodal LLM agent CLI with MCP support"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "Grigore Stefan", email = "g_stefan@yahoo.com" }]
dynamic = ["version"]

dependencies = [
    "mcp>=0.1.0",
]

[project.optional-dependencies]
# API server mode (--ui-driver api / --api-port)
api = [
    "aiohttp>=3.8.0",
    "aiohttp_cors>=0.7.0",
]
# Advanced interactive TUI with mouse support (--ui-driver textual)
tui = [
    "textual>=0.30.0",
]
# Everything
all = [
    "aiohttp>=3.8.0",
    "aiohttp_cors>=0.7.0",
    "textual>=0.30.0",
]

# The `alexis` terminal command -> alexis/cli.py:main()
[project.scripts]
alexis = "alexis.cli:main"

[tool.setuptools]
# src/ layout: a single import package `alexis` containing all modules and the
# bundled data the agent loads at runtime via importlib.resources.
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["alexis*"]

[tool.setuptools.package-data]
# Data shipped *inside* the wheel (not just the sdist), located at runtime via
# importlib.resources. Without these, the agent's bundled MCP servers, web UI,
# and version file would be missing from a `pip install`/wheel (only `-e .`
# would have worked, since that points back at the source tree).
"alexis" = ["data/*.json", "skills/*/SKILL.md", "skills/*/scripts/*", "*.md"]
"alexis.mcp" = ["*.py"]
"alexis.ui" = ["*.html"]

[tool.setuptools.dynamic]
# Single source of truth: version is read from data/version.json via
# alexis.version. importlib.resources resolves it at build time too.
version = { attr = "alexis.version.__version__" }
